scripts/prepare-networking/pagopa_vpcs/cnf-templates/multi-vpcs.yaml

AWSTemplateFormatVersion: '2010-09-09'
Description: Define a Multi-VPC (Ingress, Egress and Private) with 3 subnets in 3 different AZ attached to a transit gateway.

Parameters:

  ## Egress VPC
  VpcEgressName:
    Type: String
    Description: 'Egress VPC name'
    Default: Egress
  VpcEgressNumber:
    Type: String
    Description: Second byte from the left for VPC CIDR
    Default: 16

  ## Ingress VPC
  VpcIngressName:
    Type: String
    Description: 'Ingress VPC name'
    Default: Ingress
  VpcIngressNumber:
    Type: String
    Description: Second byte from the left for VPC CIDR
    Default: 4

  ## Private VPC
  VpcPrivateName:
    Type: String
    Description: 'Private VPC name'
    Default: Private
  VpcPrivateNumber:
    Type: String
    Description: Second byte from the left for VPC CIDR
    Default: 32
  

Resources:

  ###                        EGRESS VPC DEFINITION                         ###
  ############################################################################

  ## VPC for Egress 
  EgressVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Join ['', ["10.", !Ref "VpcEgressNumber", ".0.0/16" ]]
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub ${VpcEgressName}-VPC

  ## Subnet 1 - Public
  EgressVPCPublicEgressVPCSubNet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Join [ '', [ "10.", !Ref "VpcEgressNumber", ".0.0/24" ] ]
      VpcId:
        Ref: EgressVPC
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Egress VPC/Public SubNet 1

  EgressVPCPublicEgressVPCSubNetSubnet1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: EgressVPC

  EgressVPCPublicEgressVPCSubNetSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EgressVPCPublicEgressVPCSubNetSubnet1RouteTable
      SubnetId:
        Ref: EgressVPCPublicEgressVPCSubNet1

  EgressVPCPublicEgressVPCSubNetSubnet1DefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: EgressVPCPublicEgressVPCSubNetSubnet1RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: EgressVPCIGW
    DependsOn:
      - EgressVPCVPCGW

  ## Subnet 2 - Public
  EgressVPCPublicEgressVPCSubNet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Join [ '', [ "10.", !Ref "VpcEgressNumber", ".1.0/24" ] ]
      VpcId:
        Ref: EgressVPC
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Egress VPC/Public SubNet 2     

  EgressVPCPublicEgressVPCSubNetSubnet2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: EgressVPC

  EgressVPCPublicEgressVPCSubNetSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EgressVPCPublicEgressVPCSubNetSubnet2RouteTable
      SubnetId:
        Ref: EgressVPCPublicEgressVPCSubNet2

  EgressVPCPublicEgressVPCSubNetSubnet2DefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: EgressVPCPublicEgressVPCSubNetSubnet2RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: EgressVPCIGW
    DependsOn:
      - EgressVPCVPCGW

  ## Subnet 3 - Public
  EgressVPCPublicEgressVPCSubNet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Join [ '', [ "10.", !Ref "VpcEgressNumber", ".2.0/24" ] ]
      VpcId:
        Ref: EgressVPC
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Egress VPC/Public SubNet 3

  EgressVPCPublicEgressVPCSubNetSubnet3RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: EgressVPC

  EgressVPCPublicEgressVPCSubNetSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EgressVPCPublicEgressVPCSubNetSubnet3RouteTable
      SubnetId:
        Ref: EgressVPCPublicEgressVPCSubNet3

  EgressVPCPublicEgressVPCSubNetSubnet3DefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: EgressVPCPublicEgressVPCSubNetSubnet3RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: EgressVPCIGW
    DependsOn:
      - EgressVPCVPCGW

  ## Internet Gateway      
  EgressVPCIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Egress VPC

  ## VGW Attachment
  EgressVPCVPCGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: EgressVPC
      InternetGatewayId:
        Ref: EgressVPCIGW


  ###                        INGRESS VPC DEFINITION                        ###
  ############################################################################

  ## VPC for Ingress 
  IngressVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Join ['', ["10.", !Ref "VpcIngressNumber", ".0.0/16" ]]
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub ${VpcIngressName}-VPC

  ## Subnet 1 - Public
  IngressVPCPublicIngressVPCSubNetSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Join ['', ["10.", !Ref "VpcIngressNumber", ".0.0/24" ]]
      VpcId:
        Ref: IngressVPC
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Ingress VPC/Public SubNet 1

  IngressVPCPublicIngressVPCSubNetSubnet1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: IngressVPC
      Tags:
        - Key: Name
          Value: Ingress VPC/Public - IngressVPC SubNetSubnet1

  IngressVPCPublicIngressVPCSubNetSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet1RouteTable
      SubnetId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet1

  IngressVPCPublicIngressVPCSubNetSubnet1DefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet1RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: IngressVPCIGW
    DependsOn:
      - IngressVPCVPCGW

  ## Subnet 2 - Public
  IngressVPCPublicIngressVPCSubNetSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Join ['', ["10.", !Ref "VpcIngressNumber", ".1.0/24" ]]
      VpcId:
        Ref: IngressVPC
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Ingress VPC/Public SubNet 2

  IngressVPCPublicIngressVPCSubNetSubnet2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: IngressVPC
      Tags:
        - Key: Name
          Value: Ingress VPC/Public SubNet 2

  IngressVPCPublicIngressVPCSubNetSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet2RouteTable
      SubnetId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet2

  IngressVPCPublicIngressVPCSubNetSubnet2DefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet2RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: IngressVPCIGW
    DependsOn:
      - IngressVPCVPCGW

  ## Subnet 3 - Public
  IngressVPCPublicIngressVPCSubNetSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Join ['', ["10.", !Ref "VpcIngressNumber", ".2.0/24" ]]
      VpcId:
        Ref: IngressVPC
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Ingress VPC/Public SubNet 3
        

  IngressVPCPublicIngressVPCSubNetSubnet3RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: IngressVPC
      Tags:
        - Key: Name
          Value: Ingress VPC/Public - IngressVPC SubNetSubnet3

  IngressVPCPublicIngressVPCSubNetSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet3RouteTable
      SubnetId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet3

  IngressVPCPublicIngressVPCSubNetSubnet3DefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet3RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: IngressVPCIGW
    DependsOn:
      - IngressVPCVPCGW

  ## Internet Gateway
  IngressVPCIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Ingress VPC

  ## VPC gateway attachment
  IngressVPCVPCGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: IngressVPC
      InternetGatewayId:
        Ref: IngressVPCIGW

  ###                        PRIVATE VPC DEFINITION                        ###
  ############################################################################       

  ## Private VPC
  PrivateVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Join ['', ["10.", !Ref "VpcPrivateNumber", ".0.0/16" ]]
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub ${VpcPrivateName}-VPC

  ## Subnet 1 - Private
  PrivateVPCIsolatedSubnetprivateVPCSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Join ['', ["10.", !Ref "VpcPrivateNumber", ".0.0/24" ]]
      VpcId:
        Ref: PrivateVPC
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Private VPC/Isolated Subnet 1

  PrivateVPCIsolatedSubnetprivateVPCSubnet1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: PrivateVPC
      Tags:
        - Key: Name
          Value: Private VPC/Isolated Subnet - privateVPCSubnet1

  PrivateVPCIsolatedSubnetprivateVPCSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet1RouteTable
      SubnetId:
        Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet1

  ## Subnet 2 - Private
  PrivateVPCIsolatedSubnetprivateVPCSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Join ['', ["10.", !Ref "VpcPrivateNumber", ".1.0/24" ]]
      VpcId:
        Ref: PrivateVPC
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Private VPC/Isolated Subnet 2

  PrivateVPCIsolatedSubnetprivateVPCSubnet2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: PrivateVPC
      Tags:
        - Key: Name
          Value: Private VPC/Isolated Subnet 2

  PrivateVPCIsolatedSubnetprivateVPCSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet2RouteTable
      SubnetId:
        Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet2

  ## Subnet 3 - Private
  PrivateVPCIsolatedSubnetprivateVPCSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Join ['', ["10.", !Ref "VpcPrivateNumber", ".2.0/24" ]]
      VpcId:
        Ref: PrivateVPC
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Private VPC/Isolated Subnet 3

  PrivateVPCIsolatedSubnetprivateVPCSubnet3RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: PrivateVPC
      Tags:
        - Key: Name
          Value: Private VPC/Isolated Subnet - privateVPCSubnet3

  PrivateVPCIsolatedSubnetprivateVPCSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet3RouteTable
      SubnetId:
        Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet3

  ###                     TRANSIT GATEWAY DEFINITION                       ###
  ############################################################################

  TransitGateway:
    Type: AWS::EC2::TransitGateway
    Properties:
      DefaultRouteTableAssociation: disable
      DefaultRouteTablePropagation: disable
      AutoAcceptSharedAttachments: enable
      Description: Transit Gateway used by internal VPC of each account
      Tags:
        - Key: Name
          Value: Transit Gateway
      VpnEcmpSupport: enable

  TransitGatewayAttachmentEgress:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds:
        - Ref: EgressVPCPublicEgressVPCSubNet1
        - Ref: EgressVPCPublicEgressVPCSubNet2
        - Ref: EgressVPCPublicEgressVPCSubNet3
      TransitGatewayId: !Ref TransitGateway
      VpcId:
        Ref: EgressVPC
      Tags:
        - Key: Name
          Value: TG-Egress-VPC-Private_SubNet-Attachment
    
  TransitGatewayAttachmentIngress:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds:
        - Ref: IngressVPCPublicIngressVPCSubNetSubnet1
        - Ref: IngressVPCPublicIngressVPCSubNetSubnet2
        - Ref: IngressVPCPublicIngressVPCSubNetSubnet3
      TransitGatewayId: !Ref TransitGateway
      VpcId:
        Ref: IngressVPC
      Tags:
        - Key: Name
          Value: TG-Ingress-VPC-Private_SubNet-Attachment

  TransitGatewayAttachmentPrivate:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds:
        - Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet1
        - Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet2
        - Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet3
      TransitGatewayId: !Ref TransitGateway
      VpcId:
        Ref: PrivateVPC
      Tags:
        - Key: Name
          Value: TG-Private-VPC-Private_SubNet-Attachment

  ## Routing

  RouteEgressVPCSubNetSubnet1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: EgressVPCPublicEgressVPCSubNetSubnet1RouteTable
      DestinationCidrBlock:
        Fn::GetAtt:
          - PrivateVPC
          - CidrBlock
      TransitGatewayId: !Ref TransitGateway
    DependsOn:
      - TransitGatewayAttachmentEgress

  RouteEgressVPCSubNetSubnet2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: EgressVPCPublicEgressVPCSubNetSubnet2RouteTable
      DestinationCidrBlock:
        Fn::GetAtt:
          - PrivateVPC
          - CidrBlock
      TransitGatewayId: !Ref TransitGateway
    DependsOn:
      - TransitGatewayAttachmentEgress

  RouteEgressVPCSubNetSubnet3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: EgressVPCPublicEgressVPCSubNetSubnet3RouteTable
      DestinationCidrBlock:
        Fn::GetAtt:
          - PrivateVPC
          - CidrBlock
      TransitGatewayId: !Ref TransitGateway
    DependsOn:
      - TransitGatewayAttachmentEgress

  RouteIngressVPCSubNetSubnet1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet1RouteTable
      DestinationCidrBlock:
        Fn::GetAtt:
          - PrivateVPC
          - CidrBlock
      TransitGatewayId: !Ref TransitGateway
    DependsOn:
      - TransitGatewayAttachmentEgress

  RouteIngressVPCSubNetSubnet2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet2RouteTable
      DestinationCidrBlock:
        Fn::GetAtt:
          - PrivateVPC
          - CidrBlock
      TransitGatewayId: !Ref TransitGateway
    DependsOn:
      - TransitGatewayAttachmentEgress

  RouteIngressVPCSubNetSubnet3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IngressVPCPublicIngressVPCSubNetSubnet3RouteTable
      DestinationCidrBlock:
        Fn::GetAtt:
          - PrivateVPC
          - CidrBlock
      TransitGatewayId: !Ref TransitGateway
    DependsOn:
      - TransitGatewayAttachmentEgress

  RoutePrivateVPCSubnet1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet1RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      TransitGatewayId: !Ref TransitGateway
    DependsOn:
      - TransitGatewayAttachmentPrivate

  RoutePrivateVPCSubnet2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet2RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      TransitGatewayId: !Ref TransitGateway
    DependsOn:
      - TransitGatewayAttachmentPrivate

  RoutePrivateVPCSubnet3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateVPCIsolatedSubnetprivateVPCSubnet3RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      TransitGatewayId: !Ref TransitGateway
    DependsOn:
      - TransitGatewayAttachmentPrivate

  ## Transit gateway route table
  TGEgressRouteTable:
    Type: AWS::EC2::TransitGatewayRouteTable
    Properties:
      TransitGatewayId: !Ref TransitGateway
      Tags:
        - Key: Name
          Value: TG Route Domain

  TransitGatewayToEgressVPCRoute:
    Type: AWS::EC2::TransitGatewayRoute
    Properties:
      TransitGatewayRouteTableId:
        Ref: TGEgressRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      TransitGatewayAttachmentId:
        Ref: TransitGatewayAttachmentEgress

  EgressVPCTGAssociation:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties:
      TransitGatewayAttachmentId:
        Ref: TransitGatewayAttachmentEgress
      TransitGatewayRouteTableId:
        Ref: TGEgressRouteTable

  EgressVPCTGPropagation:
    Type: AWS::EC2::TransitGatewayRouteTablePropagation
    Properties:
      TransitGatewayAttachmentId:
        Ref: TransitGatewayAttachmentEgress
      TransitGatewayRouteTableId:
        Ref: TGEgressRouteTable

  IngressVPCTGAssociation:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties:
      TransitGatewayAttachmentId:
        Ref: TransitGatewayAttachmentIngress
      TransitGatewayRouteTableId:
        Ref: TGEgressRouteTable

  IngressVPCTGPropagation:
    Type: AWS::EC2::TransitGatewayRouteTablePropagation
    Properties:
      TransitGatewayAttachmentId:
        Ref: TransitGatewayAttachmentIngress
      TransitGatewayRouteTableId:
        Ref: TGEgressRouteTable

  PrivateVPCTGAssociation:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties:
      TransitGatewayAttachmentId:
        Ref: TransitGatewayAttachmentPrivate
      TransitGatewayRouteTableId:
        Ref: TGEgressRouteTable

  PrivateVPCTGPropagation:
    Type: AWS::EC2::TransitGatewayRouteTablePropagation
    Properties:
      TransitGatewayAttachmentId:
        Ref: TransitGatewayAttachmentPrivate
      TransitGatewayRouteTableId:
        Ref: TGEgressRouteTable


Outputs:
  TransitGatewayId:
    Description: The ID of the transit gateway.
    Value: !GetAtt TransitGateway.Id

  PrivateVPCId:
    Description: The ID of the private VPC.
    Value: !Ref PrivateVPC
